add remaining info, and tidy up

--- a/index.html
+++ b/index.html
@@ -13,16 +13,23 @@
 <body x-data="model">
   <h1>Cisco Holmenkoll-stafetten 2023</h1>
 
+  <img src="images/hk.jpeg" />
 
   <section>
-  <h2> Saturday 13th May</h2>
-  <ul>
-    <li>See <a href="https://holmenkollstafetten.no/">Official site</a> for more info.</li>
-    <li>See <a href="https://holmenkollstafetten.no/l%C3%B8ypekart" target="_blank">Track map</a></li>
-  </ul>
+    <h2> Saturday 13th May</h2>
 
-  <div>
-    Cisco has a record 5 teams this year! That means 75 runners - and one heck of a party afterwards.
+    <div>As always Cisco is participating strongly in "Vårens vakreste eventyr", or the world's largest relay race, but this year will be special. There is a lot of firsts:
+    </div>
+    <ul>
+      <li>100 year anniversary for Holmenkollstafetten</li>
+      <li>A record <b>5 Cisco teams</b> (75 runners)</li>
+      <li><b>60.000 participants</b> (new event record) </li>
+      <li><b>Private barbecue and garden party</b> after the race</li>
+      <li>And: Will it be the first year a Cisco team runs below <b>the magic hour mark</b>?</li>
+    </ul>
+
+    <div>See also the <a href="https://holmenkollstafetten.no/">holmenkollstafetten.no</a> for more info.</div>
+
   </div>
 </section>
 
@@ -31,7 +38,7 @@
   <ul class="no-disc">
     <li>📸 13:00-14:30 - Pre-race meet </li>
     <li>🚶‍♀️ 14:30 - People moves to their stages</li>
-    <li>⭐️ 15:00 - 17:30 - Race on!</li>
+    <li>⭐️ 14:50 - 17:30 - Race on!</li>
     <li>🏰 15:30 - Casa Henrik opens</li>
     <li>🍔 17:30 - 20:00: Dinner</li>
     <li>🍻 20:00 - Party</li>
@@ -43,8 +50,8 @@
   <h2>Pre-race</h2>
   <img src="./images/majorstua.jpeg" />
   <ul class="no-disc">
-    <li>💚 Remember to bring your green Cisco shirt - so it's easy to spot you on exchange</li>
-    <li>💚 Meet at the stairs in fornt of the Majorstuen metro station, towards Kirkeveien</li>
+    <li>💚 Remember to bring your green Cisco shirt - so it's easy to spot you on the exchange</li>
+    <li>💚 Meet at the stairs in fornt of the Majorstuen metro station, towards Kirkeveien (see your team's detail page below for exact time).</li>
     <li>💚 Get your start number from the team lead (first runner)</li>
     <li>💚 Say hi to the persons you will be exchanging with</li>
     <li>💚 Take team photo</li>
@@ -53,74 +60,91 @@
 </section>
 
 <section>
+  <h2>The race</h2>
+  <img src="images/therace.jpeg" />
+  <ul>
+    <li>See <a href="https://holmenkollstafetten.no/l%C3%B8ypekart" target="_blank">Track map</a> on holmenkollstafetten.no</li>
+    <li>We <i>think</i> you will be able to use the <a href="https://holmenkollstafetten.no/nyheter/f%C3%B8lg-laget-ditt-live-i-eq-me-appen" target="_blank">same app as last year</a> for tracking your team's exchanges.</li>
+    <li>Be sure to meet the persons you are exchanging with before the race</li>
+    <li>Look for the green shirt</li>
+    <li>Remember: The one that is receiving the stick, is responsible for the exchange</li>
+    <li>If you dont find anyone at the end of your run, shout Cisco loud. If all else fails, you may need to run the next stage too, but this doesn't happen often.</li>
+  </ul>
+</section>
+
+<section>
   <h2>The teams</h2>
 
-  <div>The name of the team doesn't match the order in which the teams start or the pace - it's just the number given by the organizer.</div>
+  <div><b>Note:</b>The name of the team doesn't match the order in which the teams start or the pace - it's just the number given by the organizer.</div>
 
   <template x-for="team in teams">
     <section>
       <h2 x-text="`${team.name} (${team.number})`"></h2>
       <ul>
-        <li x-text="`Meet: ${team.meet}`"></li>
+        <li x-text="`Meet at Majorstuen T-Bane: ${team.meet}`"></li>
         <li x-text="`Race start: ${team.time}`"></li>
-        <li x-text="`First runner: ${team.members[1]}`"></li>
-        <li><a :href="team.url" target="_blank">Full team</a></li>
+        <!-- <li x-text="`First runner: ${team.members[1]}`"></li> -->
+        <!-- <li><a :href="team.url" target="_blank">Full team</a></li> -->
       </ul>
       <table>
         <tr>
           <th>Stage</th>
+          <th>Runner</th>
           <th>Ca start</th>
           <th>Ca run time</th>
-          <th>Name</th>
         </tr>
         <template x-for="time, i in team.schedule">
           <tr>
             <td x-text="i + 1"></td>
+            <td x-text="team.members[i + 1] || '-'"></td>
             <td x-text="guiTime(time)"></td>
             <td x-text="guiTime(team.times[i])"></td>
-            <td x-text="team.members[i + 1] || '-'"></td>
           </tr>
         </template>
       </table>
     </section>
   </template>
-
 </section>
 
 <section>
-  <h2>The race</h2>
+  <h2>Henrik's place</h2>
+  <img src="images/casahenrik.png" />
   <ul>
-    <li>Be sure to say meet the person you are exchanging with before the race</li>
-    <li>Up to you, but usually no point in deciding which side of the road to exchange on</li>
-    <li>We wear green shirts (photo)</li>
-    <li>If you dont find anyone at the exchange when you get there, run the next stage too</li>
-    <li>You can shower at Bislett stadium</li>
-    <li>Tracking:</li>
+    <li>Opens when Henrik get's back at around 15:30</li>
+    <li>Address: <a href="https://goo.gl/maps/UhHigKm4FHaGZDmq9" target="_blank">Lillevannsveien 6</a></li>
+    <li>Very fittingly, as close to <b>Holmenkollen T-Bane station</b> as you can get</li>
+    <li>The house should be able to accomodate all the guests. There is also a garden.</li>
+    <li><b>Warning:</b> Might be difficult to get there by car, due to Holmenkoll-stafetten and closed roads</li>
+    <li>If you do intend to drive, let Henrik know (for parking puroses)</li>
+    <li>Don't worry about showering or clothing - informal party!</li>
   </ul>
 </section>
 
 <section>
-  <h2>The dinner</h2>
-  - Address: Lillevannsveien 6
-  - How to get there
-    Very close to Holmenkollen t-bane (map here)
-  - Showering
+  <h2>The dinner and party</h2>
+
+  <img src="images/bbq.webp" />
+
+  <ul>
+    <li>Strøm Larsen is grilling burgers for everyone</li>
+    <li>Servig time: <b>17:30 - 20:00</b></li>
+    <li>There will be desserts as well</li>
+    <li>Food preferences and allergies have been taken into account</li>
+    <li>Cisco is providing food, non-acoholic and alcoholic drinks</li>
+    <li>There will be some party games in the garden</li>
+    <li>Party will continue to around 22:30.</li>
+    <li>Hopefully, many will continue the party downtown.</li>
+  </ul>
 </section>
 
 <section>
-  <h2>The party</h2>
-</section>
-
-<section>
-  <div>
-    Organizing comittee:
-    <ul>
-      <li>Henrik Holstad</li>
-      <li>Andreas Aardal Hanssen</li>
-      <li>Hilde Kristine Bjerkan</li>
-      <li>Tore Bjølseth</li>
-    </ul>
-  </div>
+  <h2>Organizing comittee</h2>
+  <ul>
+    <li>Henrik Holstad</li>
+    <li>Andreas Aardal Hanssen</li>
+    <li>Hilde Kristine Bjerkan</li>
+    <li>Tore Bjølseth</li>
+  </ul>
 </section>
 
 </body>
