fix typos and add info

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <section>
     <h2> Saturday 13th May</h2>
 
-    <div>As always Cisco is participating strongly in "Vårens vakreste eventyr", or the world's largest relay race, but this year will be special. There is a lot of firsts:
+    <div>As always Cisco is participating strongly in "Vårens vakreste eventyr", or the world's largest relay race, but this year will be special, with a lot of firsts:
     </div>
     <ul>
-      <li>100 year anniversary for Holmenkollstafetten</li>
+      <li><b>100 year anniversary</b> for Holmenkollstafetten</li>
       <li>A record <b>5 Cisco teams</b> (75 runners)</li>
       <li><b>60.000 participants</b> (new event record) </li>
       <li><b>Private barbecue and garden party</b> after the race</li>
@@ -40,7 +40,7 @@
     <li>🚶‍♀️ 14:30 - People moves to their stages</li>
     <li>⭐️ 14:50 - 17:30 - Race on!</li>
     <li>🏰 15:30 - Casa Henrik opens</li>
-    <li>🍔 17:30 - 20:00: Dinner</li>
+    <li>🍔 17:30 - 20:00: Barbecue dinner</li>
     <li>🍻 20:00 - Party</li>
     <li>🥃 22:30 - Party moves on</li>
   </ul>
@@ -50,8 +50,8 @@
   <h2>Pre-race</h2>
   <img src="./images/majorstua.jpeg" />
   <ul class="no-disc">
-    <li>💚 Remember to bring your green Cisco shirt - so it's easy to spot you on the exchange</li>
     <li>💚 Meet at the stairs in fornt of the Majorstuen metro station, towards Kirkeveien (see your team's detail page below for exact time).</li>
+    <li>💚 Remember to bring your green Cisco shirt - so it's easy to spot you on the exchange</li>
     <li>💚 Get your start number from the team lead (first runner)</li>
     <li>💚 Say hi to the persons you will be exchanging with</li>
     <li>💚 Take team photo</li>
@@ -69,13 +69,16 @@
     <li>Look for the green shirt</li>
     <li>Remember: The one that is receiving the stick, is responsible for the exchange</li>
     <li>If you dont find anyone at the end of your run, shout Cisco loud. If all else fails, you may need to run the next stage too, but this doesn't happen often.</li>
+    <li>There are usually places you can leave your luggage at each exchange, but it's lightly guarded, so don't bring too valuable stuff.</li>
   </ul>
 </section>
 
 <section>
   <h2>The teams</h2>
 
-  <div><b>Note:</b>The name of the team doesn't match the order in which the teams start or the pace - it's just the number given by the organizer.</div>
+  <div><b>Note:</b>The name of the team doesn't match the order in which the teams start or the pace - it's just the number given by the organizer.
+  <p>The stage times below are guesses, based on results from previous years. Be sure to be ready and in the exchange area long before the expected exchange time. Particularly for the less ambitious teams, it's hard to give a good estimation.</p>
+  </div>
 
   <template x-for="team in teams">
     <section>
@@ -127,11 +130,11 @@
 
   <ul>
     <li>Strøm Larsen is grilling burgers for everyone</li>
-    <li>Servig time: <b>17:30 - 20:00</b></li>
+    <li>Serving time: <b>17:30 - 20:00</b></li>
     <li>There will be desserts as well</li>
     <li>Food preferences and allergies have been taken into account</li>
-    <li>Cisco is providing food, non-acoholic and alcoholic drinks</li>
-    <li>There will be some party games in the garden</li>
+    <li>Cisco is providing food, non-alcoholic drinks and alcoholic drinks (beer and wine)</li>
+    <li>There will be party games in the garden and a generally awesome mood</li>
     <li>Party will continue to around 22:30.</li>
     <li>Hopefully, many will continue the party downtown.</li>
   </ul>
