food info updates

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <h2>Pre-race</h2>
   <img src="./images/majorstua.jpeg" />
   <ul class="no-disc">
-    <li>💚 Meet at the stairs in fornt of the Majorstuen metro station, towards Kirkeveien (see your team's detail page below for exact time).</li>
+    <li>💚 Meet at the stairs in front of the Majorstuen metro station, towards Kirkeveien (see your team's detail page below for exact time).</li>
     <li>💚 Remember to bring your green Cisco shirt - so it's easy to spot you on the exchange</li>
     <li>💚 Get your start number from the team lead (first runner)</li>
     <li>💚 Say hi to the persons you will be exchanging with</li>
@@ -141,7 +141,9 @@
   <img src="images/bbq.webp" />
 
   <ul>
-    <li>Strøm Larsen is grilling burgers for everyone</li>
+    <li>Strøm Larsen is barbecuing hamburgers ("ren oksehøyrygg", water, salt)</li>
+    <li>Alternatives: Vegan burgers and vegan hot dogs (may contain milk) </li>
+    <li>No peppers (paprika) or nuts involved</li>
     <li>Serving time: <b>17:30 - 20:00</b></li>
     <li>There will be desserts as well</li>
     <li>Food preferences and allergies have been taken into account</li>
