calculate total run time for each team

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <td></td>
         <td>Finish line:</td>
         <td x-text="guiTime(team.schedule.at(-1))"></td>
-        <td></td>
+        <td x-text="guiTime(team.total)"></td>
       </tr>
     </table>
   </section>
