--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <script src="./timelib.js" defer></script>
   <script src="./index.js" defer></script>
   <script src="//unpkg.com/alpinejs" defer></script>
-</head>
+  <link rel="apple-touch-icon" href="./images/logo.png">
+  <link rel="icon" type="image/png" href="./images/logo.png"></head>
 <body x-data="model">
   <h1>Cisco Holmenkoll-stafetten 2023</h1>
 
