add tshirt photo

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
     <li>💚 Take team photo</li>
     <li>💚 Head over to your stage in good time before your expected start time</li>
   </ul>
+  <img src="./images/t-shirt.jpg" />
+  <i>As always: Don't do what Volrath does.</i>
 </section>
 
 <section>
