--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <h2>Program</h2>
   <ul class="no-disc">
     <li>📸 13:00-14:30 - Pre-race meet </li>
-    <li>🚶‍♀️ 14:30 - People moves to their stages</li>
+    <li>🚶‍♀️ 14:30 - People move to their stages</li>
     <li>⭐️ 14:50 - 17:30 - Race on!</li>
     <li>🏰 15:30 - Casa Henrik opens</li>
     <li>🍔 17:30 - 20:00: Barbecue dinner</li>
