remove time for party over

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <li>🏰 15:30 - Casa Henrik opens</li>
     <li>🍔 17:30 - 20:00: Barbecue dinner</li>
     <li>🍻 20:00 - Party</li>
-    <li>🥃 22:30 - Party moves on</li>
+    <li>🌙 Late - Party moves on</li>
   </ul>
 </section>
 
@@ -164,7 +164,7 @@
     <li>Food preferences and allergies have been taken into account</li>
     <li>Cisco is providing food, non-alcoholic drinks and alcoholic drinks (beer and wine)</li>
     <li>There will be party games in the garden and a generally awesome mood</li>
-    <li>Party will continue to around 22:30.</li>
+    <li>Party will continue until Henrik throws us out.</li>
     <li>Hopefully, many will continue the party downtown.</li>
   </ul>
 </section>
