use <wbr> in title

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="apple-touch-icon" href="./images/logo.png">
   <link rel="icon" type="image/png" href="./images/logo.png"></head>
 <body x-data="model">
-  <h1>Cisco Holmenkoll-stafetten 2023</h1>
+  <h1>Cisco Holmenkoll<wbr>stafetten 2023</h1>
 
   <img src="images/hk.jpeg" />
 
