--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
   <img src="images/therace.jpeg" />
   <ul>
     <li>See <a href="https://holmenkollstafetten.no/l%C3%B8ypekart" target="_blank">Track map</a> on holmenkollstafetten.no</li>
+    <li>All Cisco teams start from <b>St Hanshaugen</b>, not Bislett. We're good, but not that good.</li>
     <li>We <i>think</i> you will be able to use the <a href="https://holmenkollstafetten.no/nyheter/f%C3%B8lg-laget-ditt-live-i-eq-me-appen" target="_blank">same app as last year</a> for tracking your team's exchanges.</li>
     <li>Be sure to meet the persons you are exchanging with before the race</li>
     <li>Look for the green shirt</li>
