--- a/tracker/index.html
+++ b/tracker/index.html
@@ -4,6 +4,8 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhGzZW0l_iU8A5caqhVey0JQW7LKAvmoY&libraries=geometry" defer></script>
 
     <link rel="stylesheet" type="text/css" href="./style.css" />
+    <script src="./demo.js" defer></script>
+    <script src="./adapter.js" defer></script>
     <script src="./index.js" defer></script>
   </head>
   <body>
