add legend to map

--- a/tracker/index.html
+++ b/tracker/index.html
@@ -10,6 +10,13 @@
   </head>
   <body>
     <div id="map"></div>
+    <ul class="legend">
+      <li><img src="http://maps.google.com/mapfiles/ms/icons/green-dot.png" />Cisco 1</li>
+      <li><img src="http://maps.google.com/mapfiles/ms/icons/blue-dot.png" />Cisco 2</li>
+      <li><img src="http://maps.google.com/mapfiles/ms/icons/red-dot.png" />Cisco 3</li>
+      <li><img src="http://maps.google.com/mapfiles/ms/icons/orange-dot.png" />Cisco 4</li>
+      <li><img src="http://maps.google.com/mapfiles/ms/icons/pink-dot.png" />Cisco 5</li>
+    </ul>
     <button class="demo">Demo</button>
   </body>
 </html>
