refactor, make teams data available to tracker too

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css"></link>
   <title>Holmenkoll-stafetten 2023</title>
   <script src="./webex.js" defer></script>
+  <script src="./teams.js" defer></script>
   <script src="./timelib.js" defer></script>
   <script src="./index.js" defer></script>
   <script src="//unpkg.com/alpinejs" defer></script>
