--- a/tracker/index.html
+++ b/tracker/index.html
@@ -5,6 +5,7 @@
 
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="./config.js" defer></script>
+    <script src="../teams.js" defer></script>
     <script src="./demo.js" defer></script>
     <script src="./adapter.js" defer></script>
     <script src="./index.js" defer></script>
