show placeholder text while loading teams
including links to source docs for team setup

--- a/index.html
+++ b/index.html
@@ -87,6 +87,18 @@
   </div>
 </section>
 
+<div x-show="!teams.length">
+  <div>
+    <h2>Loading teams...</h2>
+    If the teams do not load for some reason, the source data is here:
+    <template x-for="team in teamData">
+      <div>
+        <a :href="team.url" target="_blank" x-text="team.name"></a>
+      </div>
+    </template>
+  </div>
+</div>
+
 <template x-for="team in teams">
   <section>
     <h2 x-text="`${team.name} (${team.number})`"></h2>
