change page title

--- a/tracker/index.html
+++ b/tracker/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Add Map</title>
+    <title>Cisco HK Tracker</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhGzZW0l_iU8A5caqhVey0JQW7LKAvmoY&libraries=geometry" defer></script>
 
     <link rel="stylesheet" type="text/css" href="./style.css" />
