--- a/tracker/index.html
+++ b/tracker/index.html
@@ -18,6 +18,7 @@
       <li><img src="http://maps.google.com/mapfiles/ms/icons/red-dot.png" />Cisco 3</li>
       <li><img src="http://maps.google.com/mapfiles/ms/icons/orange-dot.png" />Cisco 4</li>
       <li><img src="http://maps.google.com/mapfiles/ms/icons/pink-dot.png" />Cisco 5</li>
+      <li><img src="http://maps.google.com/mapfiles/kml/shapes/caution.png" />Too old</li>
     </ul>
     <button class="demo">Demo</button>
   </body>
