--- a/tracker/index.html
+++ b/tracker/index.html
@@ -19,6 +19,7 @@
       <li><img src="http://maps.google.com/mapfiles/ms/icons/orange-dot.png" />Cisco 4</li>
       <li><img src="http://maps.google.com/mapfiles/ms/icons/pink-dot.png" />Cisco 5</li>
       <li><img src="http://maps.google.com/mapfiles/kml/shapes/caution.png" />Too old</li>
+      <li><a href="/">Team lists</a></li>
     </ul>
     <button class="demo">Demo</button>
   </body>
