add tracking info

--- a/index.html
+++ b/index.html
@@ -70,13 +70,26 @@
   <ul>
     <li>See <a href="https://holmenkollstafetten.no/l%C3%B8ypekart" target="_blank">Track map</a> on holmenkollstafetten.no</li>
     <li>All Cisco teams start from <b>St Hanshaugen</b>, not Bislett. We're good, but not that good.</li>
-    <li>We <i>think</i> you will be able to use the <a href="https://holmenkollstafetten.no/nyheter/f%C3%B8lg-laget-ditt-live-i-eq-me-appen" target="_blank">same app as last year</a> for tracking your team's exchanges.</li>
     <li>Be sure to meet the persons you are exchanging with before the race</li>
     <li>Look for the green shirt</li>
     <li>Remember: The one that is receiving the stick, is responsible for the exchange</li>
     <li>If you dont find anyone at the end of your run, shout Cisco loud. If all else fails, you may need to run the next stage too, but this doesn't happen often.</li>
     <li>There are usually places you can leave your luggage at each exchange, but it's lightly guarded, so don't bring too valuable stuff.</li>
   </ul>
+</section>
+
+<section>
+  <h2>Live racking</h2>
+  <img src="images/tracker.png" />
+  <div>
+    This year, in the spirit of Cisco and play time, we have created our very own tracking system. We attach a dog tracker on each relay stick, and show the gps position of each team in a mobile web app.
+    <p/><i>Dislaimer: This is best effort and cannot be relied on 100%. Take it as additional help, not your main and only solution.</i>
+    <p/>
+    <a href="http://cs.co/hk-tracker">Link to the mobile web app</a>
+  </div>
+  <div>
+    We also <i>think</i> you will be able to use the <a href="https://holmenkollstafetten.no/nyheter/f%C3%B8lg-laget-ditt-live-i-eq-me-appen" target="_blank">same app as last year</a> for tracking your team's exchanges, as an alternative, official solution.
+  </div>
 </section>
 
 <section>
