--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <img src="images/therace.jpeg" />
   <ul>
     <li>See <a href="https://holmenkollstafetten.no/l%C3%B8ypekart" target="_blank">Track map</a> on holmenkollstafetten.no</li>
-    <li>All Cisco teams start from <b>St Hanshaugen</b>, not Bislett. We're good, but not that good.</li>
+    <li>All Cisco teams start from <b>St Hanshaugen</b>, not Bislett. We're good, but not that good. Yet...</li>
     <li>Be sure to meet the persons you are exchanging with before the race</li>
     <li>Look for the green shirt</li>
     <li>Remember: The one that is receiving the stick, is responsible for the exchange</li>
