--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </section>
 
 <section>
-  <h2>Live racking</h2>
+  <h2>Live tracking</h2>
   <img src="images/tracker.png" />
   <div>
     This year, in the spirit of Cisco and play time, we have created our very own tracking system. We attach a dog tracker on each relay stick, and show the gps position of each team in a mobile web app.
