--- a/tracker/index.html
+++ b/tracker/index.html
@@ -13,12 +13,12 @@
   <body>
     <div id="map"></div>
     <ul class="legend">
-      <li><img src="http://maps.google.com/mapfiles/ms/icons/green-dot.png" />Cisco 1</li>
+      <!-- <li><img src="http://maps.google.com/mapfiles/ms/icons/green-dot.png" />Cisco 1</li>
       <li><img src="http://maps.google.com/mapfiles/ms/icons/blue-dot.png" />Cisco 2</li>
       <li><img src="http://maps.google.com/mapfiles/ms/icons/red-dot.png" />Cisco 3</li>
       <li><img src="http://maps.google.com/mapfiles/ms/icons/orange-dot.png" />Cisco 4</li>
-      <li><img src="http://maps.google.com/mapfiles/ms/icons/pink-dot.png" />Cisco 5</li>
-      <li><img src="http://maps.google.com/mapfiles/kml/shapes/caution.png" />Too old</li>
+      <li><img src="http://maps.google.com/mapfiles/ms/icons/pink-dot.png" />Cisco 5</li> -->
+      <li><img src="http://maps.google.com/mapfiles/kml/shapes/caution.png" />= Old data</li>
       <li><a href="https://cs.co/hk2023">Team lists</a></li>
     </ul>
     <button class="demo">Demo</button>
