link to results

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     <li>If you dont find anyone at the end of your run, shout Cisco loud. If all else fails, you may need to run the next stage too, but this doesn't happen often.</li>
     <li>There are usually places you can leave your luggage at each exchange, but it's lightly guarded, so don't bring too valuable stuff.</li>
   </ul>
+  <div>Results from this year and previous years can be <a href="https://holmenkollstafetten.no/resultater">found here</a></div>
 </section>
 
 <section>
