hadnt set viewport for mobile, fix

--- a/tracker/index.html
+++ b/tracker/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Cisco HK Tracker</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhGzZW0l_iU8A5caqhVey0JQW7LKAvmoY&libraries=geometry" defer></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="./config.js" defer></script>
