replay hk positions, now that everything is over and went extremely well

--- a/tracker/index.html
+++ b/tracker/index.html
@@ -22,6 +22,7 @@
       <li><img src="http://maps.google.com/mapfiles/kml/shapes/caution.png" />= Old data</li>
       <li><a href="https://cs.co/hk2023">Team lists</a></li>
     </ul>
-    <button class="demo">Demo</button>
+    <button class="demo">Replay</button>
+    <div class="time">15:33:20</div>
   </body>
 </html>
